test/pass/dynaload/within_expr_list.lly
var v = [
    ValueError::new    |> Dynamic,
    IOError::new("10") |> Dynamic,
    KeyError::new      |> Dynamic
    ]
