test/fail/interpolation/interp_nested.lly
#[
SyntaxError: Nested interpolation is not allowed.
    from interp_nested.lly:6
]#

var v = $"^( $"^(10)" )"
